--- a/app/src/main/res/layout/activity_inicio_sesion.xml
+++ b/app/src/main/res/layout/activity_inicio_sesion.xml
@@ -48,7 +48,7 @@
 
             <ImageView
                 android:layout_width="220dp"
-                android:layout_height="55dp"
+                android:layout_height="match_parent"
                 android:layout_weight="5"
                 app:srcCompat="@drawable/ic_code_user"
                 tools:ignore="VectorDrawableCompat" />
@@ -77,7 +77,7 @@
 
             <ImageView
                 android:layout_width="220dp"
-                android:layout_height="55dp"
+                android:layout_height="match_parent"
                 android:layout_weight="5"
                 app:srcCompat="@drawable/ic_correo"
                 tools:ignore="VectorDrawableCompat" />
@@ -106,7 +106,7 @@
 
             <ImageView
                 android:layout_width="220dp"
-                android:layout_height="58dp"
+                android:layout_height="match_parent"
                 android:layout_weight="5"
                 app:srcCompat="@drawable/ic_lock"
                 tools:ignore="VectorDrawableCompat" />
@@ -125,24 +125,6 @@
                     android:inputType="textPassword" />
             </android.support.design.widget.TextInputLayout>
         </LinearLayout>
-
-
-        <!--        <LinearLayout-->
-        <!--            android:layout_width="match_parent"-->
-        <!--            android:layout_height="wrap_content"-->
-        <!--            android:orientation="horizontal"-->
-        <!--            android:gravity="center_horizontal"-->
-        <!--            android:layout_gravity="center_horizontal">-->
-
-        <!--            <CheckBox-->
-        <!--                android:id="@+id/recordar"-->
-        <!--                android:layout_width="match_parent"-->
-        <!--                android:layout_height="wrap_content"-->
-        <!--                android:layout_gravity="center"-->
-        <!--                android:text="Recordar Mi Cuenta"-->
-        <!--                android:textColor="@color/Blanco" />-->
-
-        <!--        </LinearLayout>-->
 
         <LinearLayout
             android:layout_width="fill_parent"
@@ -198,63 +180,4 @@
             android:textColor="@color/Blanco"
             android:textSize="20dp" />
     </LinearLayout>
-
-
-    <!--    <Button-->
-    <!--        android:id="@+id/aceptador"-->
-    <!--        android:layout_width="0dp"-->
-    <!--        android:layout_height="wrap_content"-->
-    <!--        android:layout_marginStart="32dp"-->
-    <!--        android:layout_marginLeft="32dp"-->
-    <!--        android:layout_marginTop="8dp"-->
-    <!--        android:layout_marginEnd="32dp"-->
-    <!--        android:layout_marginRight="32dp"-->
-    <!--        android:layout_marginBottom="8dp"-->
-    <!--        android:background="@drawable/boton"-->
-    <!--        android:elevation="2dp"-->
-    <!--        android:text="LOGIN"-->
-    <!--        android:textSize="20sp"-->
-    <!--        app:layout_constraintBottom_toBottomOf="parent"-->
-    <!--        app:layout_constraintEnd_toEndOf="parent"-->
-    <!--        app:layout_constraintHorizontal_bias="0.0"-->
-    <!--        app:layout_constraintStart_toStartOf="parent"-->
-    <!--        app:layout_constraintTop_toBottomOf="@+id/linearLayout3"-->
-    <!--        app:layout_constraintVertical_bias="0.231" />-->
-
-    <!--    <CheckBox-->
-    <!--        android:id="@+id/recordar"-->
-    <!--        android:layout_width="wrap_content"-->
-    <!--        android:layout_height="wrap_content"-->
-    <!--        android:layout_marginStart="8dp"-->
-    <!--        android:layout_marginLeft="8dp"-->
-    <!--        android:layout_marginTop="8dp"-->
-    <!--        android:layout_marginEnd="8dp"-->
-    <!--        android:layout_marginRight="8dp"-->
-    <!--        android:layout_marginBottom="8dp"-->
-    <!--        android:text="Recordar Mi Cuenta"-->
-    <!--        android:textColor="@color/Blanco"-->
-    <!--        app:layout_constraintBottom_toBottomOf="parent"-->
-    <!--        app:layout_constraintEnd_toEndOf="parent"-->
-    <!--        app:layout_constraintHorizontal_bias="0.498"-->
-    <!--        app:layout_constraintStart_toStartOf="parent"-->
-    <!--        app:layout_constraintTop_toBottomOf="@+id/aceptador"-->
-    <!--        app:layout_constraintVertical_bias="0.15" />-->
-
-
-    <!--    <ImageView-->
-    <!--        android:id="@+id/imageView3"-->
-    <!--        android:layout_width="115dp"-->
-    <!--        android:layout_height="52dp"-->
-    <!--        android:layout_marginStart="16dp"-->
-    <!--        android:layout_marginLeft="16dp"-->
-    <!--        android:layout_marginEnd="8dp"-->
-    <!--        android:layout_marginRight="8dp"-->
-    <!--        android:layout_marginBottom="16dp"-->
-    <!--        app:layout_constraintBottom_toBottomOf="parent"-->
-    <!--        app:layout_constraintEnd_toStartOf="@+id/titulo_version"-->
-    <!--        app:layout_constraintHorizontal_bias="0.0"-->
-    <!--        app:layout_constraintStart_toStartOf="parent"-->
-    <!--        app:srcCompat="@drawable/firmacompleta" />-->
-
-
 </FrameLayout>
