--- a/app/src/main/res/layout/fragment_servicios.xml
+++ b/app/src/main/res/layout/fragment_servicios.xml
@@ -40,6 +40,7 @@
                 android:layout_height="wrap_content"
                 android:hint="Descripcion"
                 app:counterEnabled="true"
+                app:errorEnabled="true"
                 app:counterMaxLength="100">
 
                 <android.support.design.widget.TextInputEditText
@@ -55,6 +56,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="Monto"
+                app:errorEnabled="true"
                 app:counterEnabled="true"
                 app:counterMaxLength="10">
 
