--- a/app/src/main/res/layout/fragment_historial_odon.xml
+++ b/app/src/main/res/layout/fragment_historial_odon.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Rutas.Fichas.HistorialOdonto.HistorialOdon"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="@color/FondoTerciario">
+    android:background="@color/FondoSecundario"
+    tools:context=".Rutas.Fichas.HistorialOdonto.HistorialOdon">
 
     <include
         android:id="@+id/toolbar"
@@ -34,34 +34,31 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
-            <Space
-                android:layout_width="match_parent"
-                android:layout_height="70dp" />
-
-            <TextView
-                android:id="@+id/titulo_detalle"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@color/AzulOscuro"
-                android:gravity="center_horizontal|center_vertical"
-                android:text="Detalle:"
-                android:textSize="18sp" />
-
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:orientation="horizontal">
+                android:layout_marginTop="70dp"
+                android:orientation="vertical">
+
+                <!--                <TextView-->
+                <!--                    android:id="@+id/titulo_detalle"-->
+                <!--                    android:layout_width="match_parent"-->
+                <!--                    android:layout_height="wrap_content"-->
+                <!--                    android:background="@color/AzulOscuro"-->
+                <!--                    android:gravity="center_horizontal|center_vertical"-->
+                <!--                    android:text="Detalle:"-->
+                <!--                    android:textSize="18sp" />-->
 
                 <CheckBox
                     android:id="@+id/dolor"
-                    android:layout_width="120dp"
+                    android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
                     android:text="Dolor" />
 
                 <EditText
                     android:id="@+id/desc_dolor"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:ems="10"
@@ -69,22 +66,27 @@
                     android:inputType="textPersonName" />
             </LinearLayout>
 
-            <CheckBox
-                android:id="@+id/gingivitis"
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Gingivitis" />
+                android:layout_height="match_parent"
+                android:layout_marginTop="10dp"
+                android:orientation="vertical">
 
-            <EditText
-                android:id="@+id/otros_ho"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:ems="10"
-                android:hint="Otros:"
-                android:inputType="textPersonName" />
+                <CheckBox
+                    android:id="@+id/gingivitis"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Gingivitis" />
+
+                <EditText
+                    android:id="@+id/otros_ho"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:ems="10"
+                    android:hint="Otros:"
+                    android:inputType="textPersonName" />
+            </LinearLayout>
 
         </LinearLayout>
-
     </ScrollView>
-
 </FrameLayout>
