--- a/app/src/main/res/layout/fragment_historial_odon_dos.xml
+++ b/app/src/main/res/layout/fragment_historial_odon_dos.xml
@@ -131,14 +131,52 @@
                 android:text="Seleccione Servicio"
                 android:textColor="@color/Blanco" />
 
-            <EditText
-                android:id="@+id/costo"
+<!--            <EditText-->
+<!--                android:id="@+id/costo"-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:layout_marginTop="10dp"-->
+<!--                android:ems="10"-->
+<!--                android:hint="Costo"-->
+<!--                android:inputType="numberDecimal" />-->
+
+            <android.support.design.widget.TextInputLayout
+                android:id="@+id/layoutServicio"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_marginTop="10dp"
-                android:ems="10"
-                android:hint="Costo"
-                android:inputType="numberDecimal" />
+                app:counterEnabled="true"
+                app:counterMaxLength="50"
+                app:errorEnabled="true">
+
+                <android.support.design.widget.TextInputEditText
+                    android:id="@+id/desc_servicio"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="Servicio"
+                    android:inputType="text"
+                    android:maxLength="50"
+                    android:maxLines="1" />
+            </android.support.design.widget.TextInputLayout>
+
+            <android.support.design.widget.TextInputLayout
+                android:id="@+id/layoutCosto"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginTop="10dp"
+                app:counterEnabled="true"
+                app:counterMaxLength="50"
+                app:errorEnabled="true">
+
+                <android.support.design.widget.TextInputEditText
+                    android:id="@+id/costo"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="Motivo"
+                    android:inputType="text"
+                    android:maxLength="50"
+                    android:maxLines="1" />
+            </android.support.design.widget.TextInputLayout>
 
             <Button
                 android:id="@+id/guardador_hm"
@@ -233,16 +271,17 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:weightSum="1"
                 android:orientation="horizontal">
 
                 <TextView
                     android:id="@+id/titulo_costo"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
+                    android:layout_weight="0.6"
                     android:background="@color/AzulOscuro"
                     android:gravity="center_horizontal|center_vertical"
-                    android:text="Costo:"
+                    android:text="Total:"
                     android:textColor="@color/Blanco"
                     android:textSize="18sp" />
 
@@ -250,7 +289,7 @@
                     android:id="@+id/tota_costo"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
+                    android:layout_weight="0.4"
                     android:gravity="center"
                     android:text="00.00"
                     android:textColor="@color/Blanco"
