--- a/app/src/main/res/layout/fragment_historial_odon_dos.xml
+++ b/app/src/main/res/layout/fragment_historial_odon_dos.xml
@@ -34,7 +34,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="70dp"
             android:orientation="vertical"
-            android:paddingBottom="60dp">
+            android:paddingBottom="200dp">
 
             <TextView
                 android:id="@+id/titulo_diagnostico"
@@ -280,19 +280,28 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp">
 
-                <HorizontalScrollView
+                <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:fillViewport="true">
+                    android:orientation="vertical">
 
-                    <TableLayout
-                        android:id="@+id/table"
-                        android:layout_width="wrap_content"
-                        android:layout_height="match_parent"
-                        android:layout_gravity="center">
+                    <HorizontalScrollView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:fillViewport="true">
 
-                    </TableLayout>
-                </HorizontalScrollView>
+                        <TableLayout
+                            android:id="@+id/table"
+                            android:layout_width="wrap_content"
+                            android:layout_height="match_parent"
+                            android:layout_gravity="center">
+
+                        </TableLayout>
+                    </HorizontalScrollView>
+
+                </LinearLayout>
+
+
             </ScrollView>
         </LinearLayout>
     </ScrollView>
