--- a/app/src/main/res/layout/fragment_historialfoto.xml
+++ b/app/src/main/res/layout/fragment_historialfoto.xml
@@ -77,7 +77,8 @@
         android:id="@+id/rv"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="60dp">
+        android:layout_marginTop="60dp"
+        android:layout_marginBottom="60dp">
 
     </android.support.v7.widget.RecyclerView>
 
