--- a/app/src/main/res/layout/item_foto.xml
+++ b/app/src/main/res/layout/item_foto.xml
@@ -1,11 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:orientation="horizontal">
 
     <com.sistemasdt.dhr.Rutas.Fichas.HistorialFoto.SquareImageView
         android:id="@+id/siv"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
+    <ImageView
+        android:id="@+id/checkFoto"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentRight="true"
+        android:layout_marginTop="5dp"
+        android:layout_marginRight="5dp"
+        android:visibility="gone"
+        android:src="@drawable/ic_check_circle" />
 </RelativeLayout>
