--- a/app/src/main/res/layout/fragment_historialfoto.xml
+++ b/app/src/main/res/layout/fragment_historialfoto.xml
@@ -51,15 +51,15 @@
             app:fab_icon="@drawable/ic_galeria"
             app:fab_title="Galeria" />
 
-        <com.getbase.floatingactionbutton.FloatingActionButton
-            android:id="@+id/borrar_hf"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:fabSize="normal"
-            app:fab_colorNormal="@color/FondoSecundario"
-            app:fab_colorPressed="@color/AzulOscuro"
-            app:fab_icon="@drawable/ic_borar"
-            app:fab_title="Borrar" />
+        <!--        <com.getbase.floatingactionbutton.FloatingActionButton-->
+        <!--            android:id="@+id/borrar_hf"-->
+        <!--            android:layout_width="match_parent"-->
+        <!--            android:layout_height="wrap_content"-->
+        <!--            app:fabSize="normal"-->
+        <!--            app:fab_colorNormal="@color/FondoSecundario"-->
+        <!--            app:fab_colorPressed="@color/AzulOscuro"-->
+        <!--            app:fab_icon="@drawable/ic_borar"-->
+        <!--            app:fab_title="Borrar" />-->
 
         <com.getbase.floatingactionbutton.FloatingActionButton
             android:id="@+id/registrar_hf"
