--- a/app/src/main/res/layout/fragment_guardador_ficha_normal.xml
+++ b/app/src/main/res/layout/fragment_guardador_ficha_normal.xml
@@ -41,7 +41,7 @@
             android:paddingTop="3dp"
             android:paddingRight="3dp"
             android:paddingBottom="3dp"
-            android:text="Paciente"
+            android:text="Diego Torres"
             android:textColor="@color/Blanco"
             android:textSize="18dp" />
 
@@ -89,7 +89,7 @@
                 android:paddingTop="3dp"
                 android:paddingRight="3dp"
                 android:paddingBottom="3dp"
-                android:text="0"
+                android:text="1"
                 android:textColor="@color/Blanco"
                 android:textSize="18dp" />
         </LinearLayout>
@@ -123,7 +123,7 @@
                 android:paddingTop="3dp"
                 android:paddingRight="3dp"
                 android:paddingBottom="3dp"
-                android:text="0"
+                android:text="2"
                 android:textColor="@color/Blanco"
                 android:textSize="18dp" />
         </LinearLayout>
@@ -157,7 +157,7 @@
                 android:paddingTop="3dp"
                 android:paddingRight="3dp"
                 android:paddingBottom="3dp"
-                android:text="0"
+                android:text="3"
                 android:textColor="@color/Blanco"
                 android:textSize="18dp" />
         </LinearLayout>
