--- a/app/src/main/res/layout/fragment_guardador_ficha_normal.xml
+++ b/app/src/main/res/layout/fragment_guardador_ficha_normal.xml
@@ -3,12 +3,25 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/FondoSecundario"
     tools:context=".Rutas.Fichas.GuardadorFichaNormal">
 
     <include
         android:id="@+id/toolbar"
         layout="@layout/toolbar" />
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/guardadorFichaN"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|end"
+        android:layout_marginRight="10dp"
+        android:layout_marginBottom="65dp"
+        android:clickable="true"
+        android:elevation="10dp"
+        android:src="@drawable/ic_check"
+        app:backgroundTint="@color/AzulOscuro" />
 
     <LinearLayout
         android:layout_width="match_parent"
